<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="14dp"
    android:background="@drawable/bg_card">

    <ImageView

        android:id="@+id/storyImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/empty_img"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/display_image_of_user_s_story" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:text="@string/developer_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyImageView" />

    <TextView
        android:id="@+id/createdDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/date_dummy"
        android:textAlignment="textStart"
        android:textColor="?attr/hintTextColor"
        android:textSize="12sp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
    <TextView
        android:id="@+id/descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="14dp"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="?attr/hintTextColor"
        android:textSize="14sp"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createdDate" />
</androidx.constraintlayout.widget.ConstraintLayout>