<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.pages.landing.story.DetailStoryPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/display_image_of_user_s_story"
            android:scaleType="centerCrop"
            android:transitionName="photo"
            tools:srcCompat="@drawable/empty_img" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/developer_name"
            android:textAlignment="center"

            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="name" />

        <TextView
            android:id="@+id/createdDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/hintTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="14dp"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            android:transitionName="description" />
        <FrameLayout
            android:id="@+id/maps_frame"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
    </LinearLayout>

</ScrollView>